@@ -27,6 +27,7 @@ curious, these links may be of interest to you:
       <li><a href="cvs.html">CVS Information</a>
       <li><a href="modules.html">Module Developer Information</a>
       <li><a href="downloadbugs.html">Downloading Bug Reports</a>
+      <li><a href="creating_rpms.html">Creating RPM Packages</a>
     </ul>
 
     <hr>
