@@ -1,3 +1,12 @@
+2002-12-08  Mikhael Goikhman  <migo@homemail.com>
+
+	* cvs.html:
+	mention autoheader and utils/configure_dev.sh
+
+	* creating_rpms.html:
+	* developers.html:
+	added full instructions for creating rpm packages
+
 2002-12-02  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* index.html: 
